--- a/index.html
+++ b/index.html
@@ -1,48 +1,19 @@
+			<iframe href="https://th.bing.com/th/id/R.9420980963c513374a52c4c90e237c73?rik=eg6ZOBXj27jk9Q&riu=http%3a%2f%2fwww.clubscikidzmd.com%2fwp-content%2fuploads%2f2020%2f11%2fcoming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg&ehk=DZbXZ%2f6lMQnleFRQSRh3Dk40dJ29%2fS6hLTCaox6VzY4%3d&risl=&pid=ImgRaw&r=0">
+
+
 			<strong><u>Email:</u></strong> ngatia3223@gmail.com<br><hr>
                         <strong><u>Phone Numbers:</u></strong> (+254) 743 349 955 <br> (+254) 773 942 232<br><hr>
                         <strong><u>Whatsapp:</u></strong> (+254) 773 942 232 <br> (+254) 743 349 955<br><hr>
                         <strong><u>Telegram:</u></strong> (+254) 743 349 955<hr></p>
 
 			<h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://twitter.com/Ngatia02" target="_blank"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.instagram.com/manz_like_ngatia/" target="_blank"><i class="fab fa-fw fa-instagram"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.facebook.com/people/Steven-Ngatia-Mwangi/100072167777998/" target="_blank"><i class="fab fa-fw fa-facebook-f"></i></a><br><br>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.linkedin.com/in/steven-mwangi-425364a0" target="_blank"><i class="fab fa-fw fa-linkedin-in"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://www.tiktok.com/@nga.tia" target="_blank"><i class="fab fa-fw fa-tiktok"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="https://open.spotify.com/user/i5sjwzy8vspxe4viszslpyq56" target="_blank"><i class="fab fa-fw fa-spotify"></i></a>
+                        <a href="https://twitter.com/Ngatia02" target="_blank">Twitter</a>
+                        <a href="https://www.instagram.com/manz_like_ngatia/" target="_blank">Instagram</a>
+                        <a href="https://www.facebook.com/people/Steven-Ngatia-Mwangi/100072167777998/" target="_blank">Facebook</a><br><br>
+                        <a href="https://www.linkedin.com/in/steven-mwangi-425364a0" target="_blank">Linkedin</a>
+                        <a href="https://www.tiktok.com/@nga.tia" target="_blank">Tiktok</a>
+                        <a href="https://open.spotify.com/user/i5sjwzy8vspxe4viszslpyq56" target="_blank">Spotify</a>
 
 			<small>Site created with &#128151 by Steven Ngatia Mwangi &copy 2022</small>
 
-      <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="contact">
-          <hr>
-            <div class="container">
-              <br>
-              <br>
-              <br>
-              <br>
-                <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Send Me A Message</h2>
-                <!-- Icon Divider-->
-                <div class="divider-custom divider-light">
-                    <div class="divider-custom-line"></div>
-                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
-                    <div class="divider-custom-line"></div>
-                </div>
-                <!-- About Section Content-->
-              <div class="text-center mt-4">
-                <div class="row">
-                    <div class="col-lg-6 ms-auto">
-                      <form action="mailto:ngatia3223@gmail.com" method="post" enctype="text/plain" target="_blank">
-                      <h4>Your Name:</h4><input type="text" name="Your Name" value=""><br>
-                      <h4>Your Phone Number (+XXX):</h4><input type="text" name="Your Phone Number" value="">
-                      <h4>Your Email Address:</h4><input type="email" name="Your Email Address" value="">
-
-                    </div>
-                    <div class="col-lg-4 me-auto"><h3>Your Message:</h3><textarea name="Your Email" rows="6" cols="50"></textarea></div>
-                </div>
-            <input type="submit" class="btn btn-xl btn-outline-light" name="" ></form>
-              </div>
-            </div>
-            <hr>
-        </section>
+    
