--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
-			<iframe href=">
-			
-			<iframe title="Coming soon" src="https://th.bing.com/th/id/R.9420980963c513374a52c4c90e237c73?rik=eg6ZOBXj27jk9Q&riu=http%3a%2f%2fwww.clubscikidzmd.com%2fwp-content%2fuploads%2f2020%2f11%2fcoming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg&ehk=DZbXZ%2f6lMQnleFRQSRh3Dk40dJ29%2fS6hLTCaox6VzY4%3d&risl=&pid=ImgRaw&r=0"></iframe>
+			<p style="background-image: url("https://th.bing.com/th/id/R.9420980963c513374a52c4c90e237c73?rik=eg6ZOBXj27jk9Q&riu=http%3a%2f%2fwww.clubscikidzmd.com%2fwp-content%2fuploads%2f2020%2f11%2fcoming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg&ehk=DZbXZ%2f6lMQnleFRQSRh3Dk40dJ29%2fS6hLTCaox6VzY4%3d&risl=&pid=ImgRaw&r=0");">
+			<br>
+			<hr>
+			<br>
+<br><br>
 
 			<strong><u>Email:</u></strong> ngatia3223@gmail.com<br><hr>
                         <strong><u>Phone Numbers:</u></strong> (+254) 743 349 955 <br> (+254) 773 942 232<br><hr>
                         <strong><u>Whatsapp:</u></strong> (+254) 773 942 232 <br> (+254) 743 349 955<br><hr>
                         <strong><u>Telegram:</u></strong> (+254) 743 349 955<hr></p>
-
+<br>
+			<hr>
+			<br>
+<br><br><br>
 			<h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a href="https://twitter.com/Ngatia02" target="_blank">Twitter</a>
                         <a href="https://www.instagram.com/manz_like_ngatia/" target="_blank">Instagram</a>
