--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-			<p style="background-image: url("https://th.bing.com/th/id/R.9420980963c513374a52c4c90e237c73?rik=eg6ZOBXj27jk9Q&riu=http%3a%2f%2fwww.clubscikidzmd.com%2fwp-content%2fuploads%2f2020%2f11%2fcoming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg&ehk=DZbXZ%2f6lMQnleFRQSRh3Dk40dJ29%2fS6hLTCaox6VzY4%3d&risl=&pid=ImgRaw&r=0");">
+			
+				<style>
+body {
+  background-image: url("https://th.bing.com/th/id/R.9420980963c513374a52c4c90e237c73?rik=eg6ZOBXj27jk9Q&riu=http%3a%2f%2fwww.clubscikidzmd.com%2fwp-content%2fuploads%2f2020%2f11%2fcoming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg&ehk=DZbXZ%2f6lMQnleFRQSRh3Dk40dJ29%2fS6hLTCaox6VzY4%3d&risl=&pid=ImgRaw&r=0");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+}
+</style>
 			<br>
 			<hr>
 			<br>
