--- a/index.html
+++ b/index.html
@@ -1,33 +1,23 @@
-			
-				<style>
-body {
-  background-image: url("https://th.bing.com/th/id/R.9420980963c513374a52c4c90e237c73?rik=eg6ZOBXj27jk9Q&riu=http%3a%2f%2fwww.clubscikidzmd.com%2fwp-content%2fuploads%2f2020%2f11%2fcoming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg&ehk=DZbXZ%2f6lMQnleFRQSRh3Dk40dJ29%2fS6hLTCaox6VzY4%3d&risl=&pid=ImgRaw&r=0");
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-}
-</style>
-			<br>
-			<hr>
-			<br>
-<br><br>
 
-			<strong><u>Email:</u></strong> ngatia3223@gmail.com<br><hr>
-                        <strong><u>Phone Numbers:</u></strong> (+254) 743 349 955 <br> (+254) 773 942 232<br><hr>
-                        <strong><u>Whatsapp:</u></strong> (+254) 773 942 232 <br> (+254) 743 349 955<br><hr>
-                        <strong><u>Telegram:</u></strong> (+254) 743 349 955<hr></p>
-<br>
-			<hr>
-			<br>
-<br><br><br>
-			<h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a href="https://twitter.com/Ngatia02" target="_blank">Twitter</a>
-                        <a href="https://www.instagram.com/manz_like_ngatia/" target="_blank">Instagram</a>
-                        <a href="https://www.facebook.com/people/Steven-Ngatia-Mwangi/100072167777998/" target="_blank">Facebook</a><br><br>
-                        <a href="https://www.linkedin.com/in/steven-mwangi-425364a0" target="_blank">Linkedin</a>
-                        <a href="https://www.tiktok.com/@nga.tia" target="_blank">Tiktok</a>
-                        <a href="https://open.spotify.com/user/i5sjwzy8vspxe4viszslpyq56" target="_blank">Spotify</a>
+	<style>
+		body {
+		  background-image: url("https://th.bing.com/th/id/R.9420980963c513374a52c4c90e237c73?rik=eg6ZOBXj27jk9Q&riu=http%3a%2f%2fwww.clubscikidzmd.com%2fwp-content%2fuploads%2f2020%2f11%2fcoming-soon-neon-sign-coming-soon-badge-in-vector-21133321.jpg&ehk=DZbXZ%2f6lMQnleFRQSRh3Dk40dJ29%2fS6hLTCaox6VzY4%3d&risl=&pid=ImgRaw&r=0");
+		  background-repeat: no-repeat;
+		  background-attachment: fixed;
+		  background-size: 100% 100%;
+		}
+		
+		button{
+			border-radius: 7px;
+			border-bottom-left-radius: 0;
+			border-color: #53488d;
+			background-color: #ffacac;
+		&:hover {
+			border-radius: 0px;}
+		
+		}
+	</style>
 
-			<small>Site created with &#128151 by Steven Ngatia Mwangi &copy 2022</small>
-
-    
+ <form action="https://www.w3docs.com/">
+         <button style="width: 5em, height: 3em" type="submit">Click me</button>
+      </form>
