--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@
 		}
 	</style>
 
- <form action="https://www.w3docs.com/">
-         <button width="200" height="70" type="submit">Click me</button>
+ <form action="https://dev-ngatia.github.io/Freelancer/">
+         <button width="200" height="70" type="submit">Back to Portfolio</button>
       </form>
